# netmonitor-cli

./: .coveragerc  .gitignore  LICENSE  README.md  ROADMAP.md  demo.py  demo_report.html  output_report.json  output_report.txt  pyproject.toml  run.py
src/netmonitor/: analyzer.py  main.py  parser.py  reporter.py
tests/: test_analyzer.py  test_parser.py
