[project]
name = "netmonitor"
version = "0.1.0"
description = "CLI tool for network log analysis"
authors = [
    {name = "Pedro Araujo", email = "pedro.araujoq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",        # CLI framework moderno
    "rich>=13.7.0",         # Output colorido y tablas
    "pydantic>=2.8.0",      # Validación de datos
    "loguru>=0.7.0",        # Logging mejorado
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]

[project.scripts]
netmonitor = "netmonitor.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
